Normalized camera.front

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -19.91806411743164,
-            "y": 15.732196807861328,
-            "z": -5.079514503479004
+            "x": -29.37959861755371,
+            "y": 21.067045211791992,
+            "z": -1.2464898824691772
         },
         "projection": 0,
         "target": {
-            "x": -11.009925842285156,
-            "y": -13.514093399047852,
-            "z": 34.48362731933594
+            "x": 15.332914352416992,
+            "y": 0.006038665771484375,
+            "z": -8.806187629699707
         },
         "type": "camera",
         "up": {
@@ -22,18 +22,18 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
+            "x": 0.5873700380325317,
+            "y": 0.6230602264404297,
+            "z": 0.885869562625885
         },
         "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
+            "x": 0.06433127820491791,
+            "y": 0.07433270663022995,
+            "z": 0.17934781312942505
         },
         "type": "world settings"
     },
@@ -375,7 +375,7 @@
         "id": 10,
         "is_dynamic": true,
         "lodEnabled": true,
-        "mass": 1.0,
+        "mass": 15.5,
         "material_path": "project/game/file1.mat",
         "mesh_type": 1,
         "model_path": "",
@@ -537,17 +537,17 @@
         "color": {
             "a": 255.0,
             "b": 255.0,
-            "g": 255.0,
-            "r": 255.0
+            "g": 56.66669464111328,
+            "r": 0.0
         },
         "cutOff": 10.0,
         "direction": {
-            "x": 0.4000000059604645,
-            "y": -0.3240000009536743,
-            "z": 1.0
+            "x": 0.5619999766349792,
+            "y": -0.41999998688697815,
+            "z": -1.0
         },
-        "id": -2116729344,
-        "intensity": 5.0,
+        "id": 1464559872,
+        "intensity": 0.6790000200271606,
         "isChild": false,
         "light_type": 0,
         "name": "",
@@ -573,9 +573,9 @@
         "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
-            "b": 0.0,
-            "g": 221.0,
-            "r": 255.0
+            "b": 106.21851348876953,
+            "g": 203.3325958251953,
+            "r": 227.61111450195313
         },
         "cutOff": 10.0,
         "direction": {
@@ -583,8 +583,8 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -2116729344,
-        "intensity": 5.0,
+        "id": 1464559872,
+        "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
         "name": "",
