Show diffuse texture

--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 60.0,
         "position": {
-            "x": -29.37959861755371,
-            "y": 21.067045211791992,
-            "z": -1.2464898824691772
+            "x": 19.809946060180664,
+            "y": 16.902002334594727,
+            "z": 1.9570308923721313
         },
         "projection": 0,
         "target": {
-            "x": 15.332914352416992,
-            "y": 0.006038665771484375,
-            "z": -8.806187629699707
+            "x": -22.283113479614258,
+            "y": -10.079523086547852,
+            "z": 2.377995014190674
         },
         "type": "camera",
         "up": {
@@ -22,38 +22,38 @@
     {
         "ambientColor": {
             "w": 1.0,
-            "x": 0.5873700380325317,
-            "y": 0.6230602264404297,
-            "z": 0.885869562625885
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "bloom": false,
         "bloomBrightness": 0.0,
         "bloomSamples": 3.0,
         "skyboxColor": {
             "w": 1.0,
-            "x": 0.06433127820491791,
-            "y": 0.07433270663022995,
-            "z": 0.17934781312942505
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
         },
         "type": "world settings"
     },
     {
         "collider": true,
-        "collider_type": 0,
+        "collider_type": 2,
         "damping": 0.0,
         "friction": 1.0,
         "id": 0,
         "is_dynamic": false,
         "lodEnabled": true,
         "mass": 1.0,
-        "material_path": "project/game/hwllo world.mat",
-        "mesh_type": 1,
+        "material_path": "project/game/file2.mat",
+        "mesh_type": 4,
         "model_path": "",
-        "name": "Floor",
+        "name": "Unnamed Entity",
         "normal_texture_path": "",
         "position": {
             "x": 0.0,
-            "y": 1.2999987602233887,
+            "y": 3.7000045776367188,
             "z": 0.0
         },
         "relative_position": {
@@ -69,7 +69,7 @@
         "roughness_texture_path": "",
         "scale": {
             "x": 100.0,
-            "y": 0.10000000149011612,
+            "y": 1.0,
             "z": 100.0
         },
         "script_index": "",
@@ -85,447 +85,7 @@
             },
             "shininess": 0.5
         },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 1,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 13.800016403198242,
-            "y": 5.600011825561523,
-            "z": 7.299994468688965
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 25.0,
-            "y": 10.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 2,
-        "is_dynamic": true,
-        "lodEnabled": true,
-        "mass": 8.399999618530273,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Player",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 4.300006866455078,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
-        },
-        "script_index": "player0",
-        "script_path": "project/game/player.py",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 1,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 0.0,
-            "y": 5.600011825561523,
-            "z": -10.300003051757813
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 40.0,
-            "y": 10.0,
-            "z": 1.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 1,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 19.5,
-            "y": 6.100002288818359,
-            "z": -23.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 90.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 26.300004959106445,
-            "y": 10.0,
-            "z": 2.000000476837158
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 1,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 29.400074005126953,
-            "y": 5.600011825561523,
-            "z": 1.299999713897705
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 90.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 58.799617767333984,
-            "y": 22.100046157836914,
-            "z": 6.199996471405029
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 10,
-        "is_dynamic": true,
-        "lodEnabled": true,
-        "mass": 15.5,
-        "material_path": "project/game/file1.mat",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Box",
-        "normal_texture_path": "",
-        "position": {
-            "x": 10.300003051757813,
-            "y": 5.500011444091797,
-            "z": 0.0
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 3.0,
-            "y": 5.0,
-            "z": 3.0
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 1.0,
-            "Roughness": 1.0,
-            "SpecularIntensity": 1.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 1.0
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 0,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 1,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Wall",
-        "normal_texture_path": "",
-        "position": {
-            "x": 26.600027084350586,
-            "y": 6.100002288818359,
-            "z": -28.300020217895508
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 15.09996223449707,
-            "y": 9.999996185302734,
-            "z": 2.1000006198883057
-        },
-        "script_index": "",
-        "script_path": "",
-        "surface_material": {
-            "DiffuseIntensity": 0.5,
-            "Roughness": 0.5,
-            "SpecularIntensity": 0.5,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.5
-        },
-        "texture_path": "",
-        "tiling": [
-            1.0,
-            1.0
-        ],
-        "type": "entity"
-    },
-    {
-        "collider": true,
-        "collider_type": 2,
-        "damping": 0.0,
-        "friction": 1.0,
-        "id": 3,
-        "is_dynamic": false,
-        "lodEnabled": true,
-        "mass": 1.0,
-        "material_path": "project/game/monster.mat",
-        "mesh_type": 1,
-        "model_path": "",
-        "name": "Monster",
-        "normal_texture_path": "",
-        "position": {
-            "x": -19.40000343322754,
-            "y": 3.600004196166992,
-            "z": 18.000032424926758
-        },
-        "relative_position": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "rotation": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 0.0
-        },
-        "roughness_texture_path": "",
-        "scale": {
-            "x": 3.0,
-            "y": 3.0,
-            "z": 3.0
-        },
-        "script_index": "monster1",
-        "script_path": "project/game/monster.py",
-        "surface_material": {
-            "DiffuseIntensity": 0.0,
-            "Roughness": 0.0,
-            "SpecularIntensity": 0.0,
-            "SpecularTint": {
-                "x": 1.0,
-                "y": 1.0,
-                "z": 1.0
-            },
-            "shininess": 0.0
-        },
-        "texture_path": "",
+        "texture_path": "project/game/192357 (1080p).mp4",
         "tiling": [
             1.0,
             1.0
@@ -537,45 +97,8 @@
         "color": {
             "a": 255.0,
             "b": 255.0,
-            "g": 56.66669464111328,
-            "r": 0.0
-        },
-        "cutOff": 10.0,
-        "direction": {
-            "x": 0.5619999766349792,
-            "y": -0.41999998688697815,
-            "z": -1.0
-        },
-        "id": 1464559872,
-        "intensity": 0.6790000200271606,
-        "isChild": false,
-        "light_type": 0,
-        "name": "",
-        "position": {
-            "x": 4.0,
-            "y": 5.0,
-            "z": 3.0
-        },
-        "relative_position": {
-            "x": 0,
-            "y": 0,
-            "z": 0
-        },
-        "specularStrength": 0.5,
-        "target": {
-            "x": 0.0,
-            "y": 0.0,
-            "z": 22.0
-        },
-        "type": "light"
-    },
-    {
-        "attenuation": 9.999999747378752e-05,
-        "color": {
-            "a": 255.0,
-            "b": 106.21851348876953,
-            "g": 203.3325958251953,
-            "r": 227.61111450195313
+            "g": 255.0,
+            "r": 255.0
         },
         "cutOff": 10.0,
         "direction": {
@@ -583,14 +106,14 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 1464559872,
+        "id": 2,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "",
+        "name": "Light",
         "position": {
             "x": 4.0,
-            "y": 5.0,
+            "y": 16.700040817260742,
             "z": 3.0
         },
         "relative_position": {
