--- a/imgui.ini
+++ b/imgui.ini
@@ -54,6 +54,16 @@ Pos=60,60
 Size=370,230
 Collapsed=0
 
+[Window][Texture Previewer]
+Pos=60,60
+Size=370,41
+Collapsed=0
+
+[Window][Diffuse Texture]
+Pos=173,104
+Size=375,404
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
