--- a/imgui.ini
+++ b/imgui.ini
@@ -60,8 +60,13 @@ Size=370,41
 Collapsed=0
 
 [Window][Diffuse Texture]
-Pos=173,104
+Pos=590,134
 Size=375,404
+Collapsed=0
+
+[Window][Normal Texture]
+Pos=60,60
+Size=370,391
 Collapsed=0
 
 [Docking][Data]
