--- a/imgui.ini
+++ b/imgui.ini
@@ -16,7 +16,7 @@ DockId=0x00000009,0
 
 [Window][ Code Editor]
 Pos=743,609
-Size=709,363
+Size=640,363
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -28,13 +28,13 @@ DockId=0x00000003,0
 
 [Window][ Scene Editor]
 Pos=371,57
-Size=1081,550
+Size=1012,550
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Inspector]
-Pos=1454,57
-Size=370,915
+Pos=1385,57
+Size=439,915
 Collapsed=0
 DockId=0x00000005,0
 
@@ -74,16 +74,21 @@ Pos=60,60
 Size=370,391
 Collapsed=0
 
+[Window][Ambient Occlusion Texture]
+Pos=60,60
+Size=370,391
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1383,915 Split=X
     DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1081,915 Split=Y
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1012,915 Split=Y
       DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=1824,550 CentralNode=1 Selected=0xA951099C
       DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1824,363 Split=X Selected=0x4C3AEE3A
         DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=370,295 Selected=0x567E8AAB
-        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=709,295 Selected=0x4C3AEE3A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
+        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=640,295 Selected=0x4C3AEE3A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=439,915 Split=Y Selected=0x7C689C01
     DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=370,458 Selected=0x7C689C01
     DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=370,455 Selected=0x392A5ADD
 
