Improved player controllers

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,16 +9,16 @@ Size=400,400
 Collapsed=0
 
 [Window][ Assets Explorer]
-Pos=371,609
-Size=371,363
+Pos=371,528
+Size=1081,444
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000008,0
 
 [Window][ Code Editor]
-Pos=744,609
-Size=639,363
+Pos=371,528
+Size=1081,444
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000008,1
 
 [Window][ Objects List]
 Pos=0,57
@@ -28,13 +28,13 @@ DockId=0x00000003,0
 
 [Window][ Scene Editor]
 Pos=371,57
-Size=1012,550
+Size=1081,469
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][ Inspector]
-Pos=1385,57
-Size=439,915
+Pos=1454,57
+Size=370,915
 Collapsed=0
 DockId=0x00000005,0
 
@@ -80,15 +80,13 @@ Size=370,391
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
-  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1383,915 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
-    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1012,915 Split=Y
-      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=1824,550 CentralNode=1 Selected=0xA951099C
-      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1824,363 Split=X Selected=0x4C3AEE3A
-        DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=371,295 Selected=0x567E8AAB
-        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=639,295 Selected=0x4C3AEE3A
-  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=439,915 Split=Y Selected=0x7C689C01
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=370,458 Selected=0x7C689C01
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=370,455 Selected=0x392A5ADD
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1081,915 Split=Y
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=1824,469 CentralNode=1 Selected=0xA951099C
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=1824,444 Selected=0x4C3AEE3A
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,458 Selected=0x7C689C01
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,455 Selected=0x392A5ADD
 
