--- a/imgui.ini
+++ b/imgui.ini
@@ -10,15 +10,15 @@ Collapsed=0
 
 [Window][ Assets Explorer]
 Pos=371,589
-Size=1081,383
+Size=541,383
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][ Code Editor]
-Pos=371,589
-Size=1081,383
+Pos=914,589
+Size=538,383
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x0000000A,0
 
 [Window][ Objects List]
 Pos=0,57
@@ -80,13 +80,15 @@ Size=370,391
 Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1081,915 Split=Y
-      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=1824,530 CentralNode=1 Selected=0xA951099C
-      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=1824,383 Selected=0x4C3AEE3A
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
-    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=370,458 Selected=0x7C689C01
-    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=370,455 Selected=0x392A5ADD
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
+  DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=369,915 Selected=0xB6EB8CBE
+    DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=1081,915 Split=Y
+      DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=1824,530 CentralNode=1 Selected=0xA951099C
+      DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=1824,383 Split=X Selected=0x567E8AAB
+        DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=541,383 Selected=0x567E8AAB
+        DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=538,383 Selected=0x4C3AEE3A
+  DockNode        ID=0x00000002 Parent=0x8B93E3BD SizeRef=370,915 Split=Y Selected=0x7C689C01
+    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=370,458 Selected=0x7C689C01
+    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=370,455 Selected=0x392A5ADD
 
