--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "ffmpeg"]
     path = ffmpeg
     url = https://github.com/FFmpeg/FFmpeg.git
+[submodule "meshoptimizer"]
+    path = meshoptimizer
+    url = https://github.com/zeux/meshoptimizer.git
