--- a/imgui.ini
+++ b/imgui.ini
@@ -79,6 +79,16 @@ Pos=60,60
 Size=370,391
 Collapsed=0
 
+[Window][Create New Theme]
+Pos=62,62
+Size=430,128
+Collapsed=0
+
+[Window][File Explorer]
+Pos=60,60
+Size=370,447
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,57 Size=1824,915 Split=X Selected=0xA951099C
   DockNode        ID=0x00000001 Parent=0x8B93E3BD SizeRef=1452,915 Split=X
